<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Work4U Bio Móvil</string>
    <string name="app_titel">Work4U Bio Móvil</string>
    <string name="show_signups_title">Fichadas del dia</string>
    <string name="status">Abra el Lector</string>
    <string name="txt_status"></string>
    <string name="txt_bt1">Conectar Lector</string>
    <string name="txt_bt2">Desconectar Lector</string>
    <string name="txt_bt9">Get Fingerprint Image</string>
    <string name="txt_bt10">Enrolar Huella</string>
    <string name="txt_bt11">Fichar</string>
    <string name="txt_image">Imagen FP</string>
    <string name="txt_chkimg1">Mostrar huella</string>
    <string name="txt_fp1">Coloque su dedo en el lector</string>
    <string name="txt_fichaok">Ficho Ok </string>
    <string name="txt_fichafail">Error al verificar la huella</string>
    <string name="last_signup_today">Ultima fichada del dia</string>
    <string name="label_legajo_last_signup">Legajo : </string>
    <string name="label_fullname_last_signup">Nombre : </string>
    <string name="label_time_last_signup">Horario : </string>
    <string name="no_registered_signups">No se ha fichado el dia de hoy</string>
    <string name="title_activity_enrol">Nueva Persona</string>
    <string name="title_activity_modify">Modificar Persona</string>
    <!--Strings related to login screen-->
    <string name="login_title">Ingreso a W4u Bio Movil</string>
    <!--Strings related to new enroll-->
    <string name="hint_employee_number">Legajo del empleado</string>
    <string name="hint_validate_legajo">Validar el legajo</string>
    <string name="error_duplicated_employee">El empleado ya se encuentra registrado.</string>
    <string name="error_no_employees">Para poder fichar se necesita cargar al menos un empleado.</string>
    <string name="hint_employee_fullname">Nombre y apellido</string>
    <string name="cannot_enroll_employee_without_fpdevice">Para enrolar un empleado debe estar conectado el lector de huellas.</string>
    <string name="button_read_fingerprint">Leer Huella</string>
    <string name="button_validate_legajo">Validar Legajo</string>
    <string name="button_save_new_enroll">Guardar Empleado</string>
    <!--Strings related to dialog boxes-->
    <string name="dialog_gps_needed">Se necesitan permisos de acceso al GPS para operar.</string>
    <string name="dialog_delete">¿Estás seguro de eliminarlo?</string>
    <string name="dialog_accept">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>
    <!--Strings related to menu-->
    <string name="menu_show_employees">Empleados</string>
    <string name="menu_new_employee">Nuevo Empleado</string>
    <string name="menu_show_today_signups">Fichadas del dia</string>
    <!--String for fill space on view design-->
    <string name="placeholder">placeholder</string>.
    <string name="getting_coordinates">Recolectando coordenadas del GPS. Aguarde por favor...</string>
    <string name="missing_fingerprint_devices">No es posible utilizar el dispositivo lector. Verifique la conexión al dispositivo.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_ver_empleados">Ver Empleados</string>
    <string name="title_activity_login">W4U Bio Movil - Ingreso</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar o Registrar usuario</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">El email ingresado no es correcto</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña o el usuario es incorrecto</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>