<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ActivityEmployeeABM">

    <EditText
        android:id="@+id/txtEmployeeNumber"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/slight_dark_with_transparency"
        android:ems="10"
        android:inputType="number"
        android:maxLength="5"
        android:paddingLeft="9dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnValidatelegajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmployeFullname"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/slight_dark_with_transparency"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint_validate_legajo"
        android:inputType="textPersonName"
        android:paddingLeft="9dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/fpImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnValidatelegajo" />

    <ImageView
        android:id="@+id/fpImage"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:src="@drawable/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/btnScanear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmployeFullname" />

    <Button
        android:id="@+id/btnScanear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/abm_input_colors_background"
        android:enabled="false"
        android:onClick="btnScanearOnClick"
        android:text="@string/button_read_fingerprint"
        android:textColor="@color/abm_input_colors_text_buttons_disabled"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fpImage" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/abm_input_colors_background"
        android:enabled="false"
        android:onClick="btnGuardarOnClickHandler"
        android:text="@string/button_save_new_enroll"
        android:textColor="@color/abm_input_colors_text_buttons_disabled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnScanear" />

    <Button
        android:id="@+id/btnValidatelegajo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/abm_input_colors_background"
        android:onClick="ValidarLegajo"
        android:text="@string/button_validate_legajo"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtEmployeFullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmployeeNumber" />

</android.support.constraint.ConstraintLayout>